Change CMD to use start.sh instead of app.py
Updated the Dockerfile to use start.sh for execution.

--- a/contador-visitas/docker-contador-visitas/Dockerfile
+++ b/contador-visitas/docker-contador-visitas/Dockerfile
@@ -7,11 +7,13 @@ RUN apt-get update && apt-get install -y \
 WORKDIR /app
 
 COPY requirements.txt .
-
 RUN pip install --no-cache-dir -r requirements.txt
 
 COPY . .
 
+
+RUN chmod +x start.sh
+
 EXPOSE 5000
 
-CMD ["python", "app.py"]
+CMD ["./start.sh"]
