--- a/contador-visitas/docker-contador-visitas/Dockerfile
+++ b/contador-visitas/docker-contador-visitas/Dockerfile
@@ -2,6 +2,7 @@ FROM python:3.9
 
 RUN apt-get update && apt-get install -y \
     gcc \
+    redis-server \
     && rm -rf /var/lib/apt/lists/*
 
 WORKDIR /app
@@ -10,7 +11,6 @@ COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
 COPY . .
-
 
 RUN chmod +x start.sh
 
