--- a/contador-visitas/docker-contador-visitas/Dockerfile
+++ b/contador-visitas/docker-contador-visitas/Dockerfile
@@ -1,5 +1,6 @@
 FROM python:3.9
 
+
 RUN apt-get update && apt-get install -y \
     gcc \
     redis-server \
@@ -9,6 +10,7 @@ WORKDIR /app
 
 COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
+RUN pip install flagsmith
 
 COPY . .
 
